tests/positive/unary_operations_complex.em
int main() {
    int x = 5;
    int y = ++x;
    bool b = !false;
    return y;
}