tests/negative/for_typical.em
int main() {
    for (i = 0; i < 5; i++) {
        int x = i;
    }
    return 0;
}